[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-schema-gen-py"
version = "0.1.0"
description = "Generate Anthropic/OpenAI tool schemas from Python type hints and docstrings"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["llm", "anthropic", "openai", "tool-calling", "schema", "type-hints"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.setuptools.packages.find]
where = ["src"]
